--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -12,7 +12,7 @@
 <a href="#あこがれの郵便馬車">あこがれの郵便馬車</a><br>
 <a href="#あなたがいるから">あなたがいるから</a><br>
 <a href="#あばれ太鼓">あばれ太鼓</a><br>
-<a href="#ありがとうあなた">ありがとうあなた</a><br>
+<a href="#ありがとう あなた">ありがとう あなた</a><br>
 <a href="#亜麻色の髪の乙女">亜麻色の髪の乙女</a><br>
 <a href="#天城越え">天城越え</a><br>
 <a href="#安里屋ユンタ">安里屋ユンタ</a><br>
@@ -133,7 +133,7 @@ Ha... You are the one<br>
 小倉名代は　無法松<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="ありがとうあなた">【ありがとうあなた】</a>E1-F2<br>
+<a id="ありがとう あなた">【ありがとう あなた】</a>E1-F2<br>
 <br>
 1 私のせいなら　許してください<br>
 あなたをこんなに　苦しめたことを<br>
@@ -251,9 +251,9 @@ Ha... You are the one<br>
 1 赤い花ゆれる　愛されてゆれる<br>
 愛されて頬そめて　<ruby><rb>恥</rb><rt>は</rt></ruby>じらっている<br>
 白い花ゆれる　うつむいて揺れる<br>
-愛されることなくて　はじらっている<br>
+愛されることなくて　恥じらっている<br>
 <br>
-あ　あの人がただ赤い花を<br>
+あ　あの人　がただ赤い花を<br>
 生まれつき好きならば　それまでだけど<br>
 愛される花も　愛されぬ花も<br>
 咲いて散るひと春に　変わりないのに<br>
@@ -263,13 +263,16 @@ Ha... You are the one<br>
 白い花枯れる　<ruby><rb>音</rb><rt>おと</rt></ruby>もなく枯れる<br>
 風に乗り風に乗り　遠くへ消える<br>
 <br>
-あ　あの人がただ赤い花を<br>
+あ　あの人　がただ赤い花を<br>
 生まれつき好きならば　それまでだけど<br>
 愛される花も　愛されぬ花も<br>
 咲いて散るひと春に　変わりないのに<br>
 <br>
-3 あ　あの人がただ赤い花を<br>
+3 あ　あの人　がただ赤い花を<br>
 生まれつき好きならば　それまでだけど<br>
+愛される花も　愛されぬ花も<br>
+咲いて散るひと春に　変わりないのに<br>
+<br>
 愛される花も　愛されぬ花も<br>
 咲いて散るひと春に　変わりないのに<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
