--- a/enkas/く.html
+++ b/enkas/く.html
@@ -12,7 +12,8 @@
 <a href="#空港">空港</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="唇よ、熱く君を語れ">【唇よ、熱く君を語れ】</a><br>
+<a id="唇よ、熱く君を語れ">【唇よ、熱く君を語れ】</a>G1-C3<br>
+<br>
 1 南風は女神　<ruby><rb>絹</rb><rt>きぬ</rt></ruby>ずれの魔術<br>
 素<ruby><rb>肌</rb><rt>はだ</rt></ruby>に<ruby><rb>絡</rb><rt>から</rt></ruby>んだ　<ruby><rb>陰</rb><rt>かげ</rt></ruby>りを連れ去る<br>
 去年越しの人は　シルエット・シャドー<br>
