--- a/enkas/は.html
+++ b/enkas/は.html
@@ -49,7 +49,7 @@
 <a id="ハイサイおじさん">【ハイサイおじさん】</a>B1-C3<br>
 <br>
 1 ハイサイおじさん　ハイサイおじさん<br>
-昨<ruby><rb>夜</rb><rt>び</rt></ruby>ぬ三<ruby><rb>合瓶</rb><rt>ごうびん</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby><ruby><rb> 残</rb><rt>ぬく</rt></ruby>とんな<br>
+昨<ruby><rb>夜</rb><rt>び</rt></ruby>ぬ三<ruby><rb>合</rb><rt>ごう</rt></ruby><ruby><rb>瓶</rb><rt>びん</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby><ruby><rb>残</rb><rt>ぬく</rt></ruby>とんな<br>
 残とら　<ruby><rb>我</rb><rt>わ</rt></ruby>んに　分きらんな<br>
 <br>
 ありあり<ruby><rb>童</rb><rt>わらばー</rt></ruby>　いぇー童<br>
@@ -57,79 +57,175 @@
 残とんで言ゅんな　いぇー童<br>
 <br>
 あんせおじさん<br>
-三合瓶し<ruby><rb>不足</rb><rt>ふずく</rt></ruby>やみせぇーら<br>
+三合瓶<ruby><rb>誌</rb><rt>し</rt></ruby><ruby><rb>不足</rb><rt>ふすく</rt></ruby>やみせぇーら<br>
 <ruby><rb>一升</rb><rt>いっす</rt></ruby>ビン我んに　<ruby><rb>呉</rb><rt>くぃ</rt></ruby>みせーみ<br>
 <br>
 2 ハイサイおじさん　ハイサイおじさん<br>
-<ruby><rb>年</rb><rt>とぅし</rt></ruby><ruby><rb>頃</rb><rt>ぐる</rt></ruby>なたくと　<ruby><rb>妻</rb><rt>とぅむ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ふさぬ<br>
-<ruby><rb>貴方</rb><rt>うんじゅ</rt></ruby>が<ruby><rb>汝</rb><rt>いやー</rt></ruby>ん<ruby><rb>子</rb><rt>ぐわ</rt></ruby>や　<ruby><rb>呉</rb><rt>くぃ</rt></ruby>みそうらに<br>
+<ruby><rb>年</rb><rt>とぅし</rt></ruby><ruby><rb>頃</rb><rt>ぐる</rt></ruby>なたくと　<ruby><rb>妻</rb><rt>とじ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ふさぬ<br>
+<ruby><rb>貴方</rb><rt>うんじゅ</rt></ruby>が<ruby><rb>汝</rb><rt>いなぐ</rt></ruby>ん<ruby><rb>子</rb><rt>ぐわ</rt></ruby>や　<ruby><rb>呉</rb><rt>くぃ</rt></ruby>みそうらに<br>
 <br>
 ありーあり童　いぇー童<br>
 <ruby><rb>汝</rb><rt>いやー</rt></ruby>や童ぬくさぶっくいて<br>
-<ruby><rb>妻</rb><rt>とぅむ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>とめゆんな　いぇー童<br>
+<ruby><rb>妻</rb><rt>とじ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>とめゆんな　いぇー童<br>
 <br>
-あんせおじさん　二十や余て三十過ぎて<br>
-白髪（しらぎ）かみてから 妻（とぅむ）とめゆみ<br>
-ハイサイおじさん ハイサイおじさん<br>
-おじさんカンパチ まぎさよい<br>
-みーみじカンパチ 台湾はぎ<br>
-ありあり童（わらばー） いぇー童（わらばー）<br>
-頭（ちぶる）んはぎとし 出来やーど<br>
-我（わ）ったー元祖（ぐゎんすん）ん むる出来やー<br>
-あんせおじさん 我（わ）んにん整形しみやーい<br>
-あまくまカンパチ 植（い）いゆがや<br>
-ハイサイおじさん ハイサイおじさん<br>
-おじさんヒジ小（ぐゎ）ぬ をかさよい<br>
-天井（てぃんじょ）ぬいぇんちゅぬ ヒジどやる<br>
-ありあり童（わらばー） いぇー童（わらばー）<br>
-汝（いやー）やヒジヒジ笑ゆしが<br>
-ヒジ小（ぐゎ）ぬあしがる むてゆんど<br>
-あんせんおじさん 我（わ）んにん負きらん明日（あちゃー）から<br>
-いぇんちゅぬヒジ小（ぐゎ） 立てゆがや<br>
-ハイサイおじさん ハイサイおじさん<br>
-昨日ぬ女郎（じゅり）小（ぐゎ）ぬ 香（か）ばさよい<br>
-うんじゅん一度 めんそーれー<br>
-ありあり童（わらばー） いぇー童（わらばー）<br>
-辻、中島、渡地とぅ<br>
-おじさんやあまぬ 株主ど<br>
-あんせんおじさん毎日（めーなち）あまにくまとして<br>
-我（わ）んねー貧乏（ひんすー）や たきちきゆみ<br>
+あんせおじさん　<ruby><rb>廿オ</rb><rt>はたち</rt></ruby>や余て三十過ぎて<br>
+<ruby><rb>白</rb><rt>しら</rt></ruby><ruby><rb>髪</rb><rt>ぎ</rt></ruby>かみてから　<ruby><rb>妻</rb><rt>とじ</rt></ruby>とめゆみ<br>
+<br>
+3 ハイサイおじさん　ハイサイおじさん<br>
+おじさんカンパチ　まぎさよい<br>
+みーみじカンパチ　台湾はぎ<br>
+<br>
+ありあり童　いぇー童<br>
+<ruby><rb>頭</rb><rt>ちぶる</rt></ruby>ぬ<ruby><rb>秃</rb><rt>はぎ</rt></ruby>とし　<ruby><rb>出来</rb><rt>でいき</rt></ruby>やーど<br>
+我ったー<ruby><rb>元祖</rb><rt>ぐゎんず</rt></ruby>んむる出来やー<br>
+<br>
+あんせおじさん　我んにん<ruby><rb>整形</rb><rt>せいけい</rt></ruby>しみやーい<br>
+あまくまカンパチ　<ruby><rb>植</rb><rt>い</rt></ruby>いゆがや<br>
+<br>
+4 ハイサイおじさん　ハイサイおじさん<br>
+おじさんヒジ<ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ぬ　をかさよい<br>
+<ruby><rb>天井</rb><rt>てぃんじょう</rt></ruby>ぬいぇんちゅぬ　ヒジどやる<br>
+<br>
+ありあり童　いぇー童<br>
+<ruby><rb>汝</rb><rt>いやー</rt></ruby>やヒジヒジ笑ゆしが<br>
+ヒジ<ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ぬあしがるむてゆんど<br>
+<br>
+あんせんおじさん　我にん負きらん<ruby><rb>明日</rb><rt>あちゃー</rt></ruby>から<br>
+いぇんちゅぬヒジ<ruby><rb>小</rb><rt>ぐゎ</rt></ruby>立てゆがや<br>
+<br>
+5 ハイサイおじさん　ハイサイおじさん<br>
+昨<ruby><rb>夜</rb><rt>び</rt></ruby>ぬ<ruby><rb>女</rb><rt>じゅ</rt></ruby><ruby><rb>郎</rb><rt>り</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ぬ<ruby><rb>香</rb><rt>かば</rt></ruby>さよい<br>
+うんじゅん一度　めんそーれー<br>
+<br>
+ありあり童　いぇー童<br>
+<ruby><rb>辻</rb><rt>ちいじ</rt></ruby>、中<ruby><rb>島</rb><rt>しま</rt></ruby>、<ruby><rb>渡地</rb><rt>わたんじ</rt></ruby>とぅ<br>
+おじさんやあまぬ　<ruby><rb>株主</rb><rt>かぶぬし</rt></ruby>ど<br>
+<br>
+あんせんおじさん　<ruby><rb>毎日</rb><rt>めーなち</rt></ruby>あまにくまとーて<br>
+我んねー<ruby><rb>貧</rb><rt>ひん</rt></ruby><ruby><rb>乏</rb><rt>すー</rt></ruby>たきちきゆみ<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="ハナミズキ">【ハナミズキ】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
-<br><hr><br><h1>
-<a id="バラ色の人生">【バラ色の人生】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
-<br><hr><br><h1>
-<a id="埴生の宿">【埴生の宿】</a>C1-E2<br>
+<a id="ハナミズキ">【ハナミズキ】</a>E1-G2<br>
 <br>
-1 廻し合羽も　三年がらす<br>
-意地の<ruby><rb>縞</rb><rt>しま</rt></ruby>目も　ほつれがち<br>
-夕陽背にして　<ruby><rb>薄</rb><rt>すすき</rt></ruby>を噛めば<br>
-湯の香しみじみ　里ごころ<br>
-やだねったら　やだね<br>
-やだねったら　やだね<br>
-箱根八里の半次郎<br>
+1 空を　押し上げて<br>
+手を伸ばす君　<ruby><rb>五月</rb><rt>ごがつ</rt></ruby>のこと<br>
+どうか　来てほしい<br>
+水<ruby><rb>際</rb><rt>ぎわ</rt></ruby>まで来てほしい<br>
+つぼみをあげよう<br>
+庭のハナミズキ<br>
 <br>
-2 <ruby><rb>寄木細工</rb><rt>よせきざいく</rt></ruby>よ　色恋沙汰は<br>
-つぼを<ruby><rb>外</rb><rt>はず</rt></ruby>せば　くいちがう<br>
-宿場むすめと　一本<ruby><rb>刀</rb><rt>がたな</rt></ruby><br>
-情けからめば　<ruby><rb>錆</rb><rt>さび</rt></ruby>がつく<br>
-やだねったら　やだね<br>
-やだねったら　やだね<br>
-まして半<ruby><rb>端</rb><rt>ぱ</rt></ruby>な　三度<ruby><rb>笠</rb><rt>がさ</rt></ruby><br>
+薄紅色の　可愛い君のね<br>
+果てない夢がちゃんと<br>
+終わりますように<br>
+君と好きな人が<br>
+百年続きますように<br>
 <br>
-3 <ruby><rb>杉</rb><rt>すぎ</rt></ruby>の<ruby><rb>木</rb><rt>こ</rt></ruby><ruby><rb>立</rb><rt>だち</rt></ruby>を　三<ruby><rb>尺</rb><rt>じゃく</rt></ruby>よけて<br>
-生まれ在所を　しのび笠<br>
-おっ母すまねぇ　顔さえ出せぬ<br>
-<ruby><rb>積</rb><rt>せき</rt></ruby>る不<ruby><rb>幸</rb><rt>こう</rt></ruby>は　倍返し<br>
-やだねったら　やだね<br>
-やだねったら　やだね<br>
-箱根八里の半次郎<br>
+2 夏は　暑過ぎて<br>
+僕から気持ちは<ruby><rb>重</rb><rt>おも</rt></ruby>すぎて<br>
+一緒に　わたるには<br>
+きっと船が沈んじゃう<br>
+どうぞゆきなさい<br>
+お先にゆきなさい<br>
+<br>
+僕の<ruby><rb>我</rb><rt>が</rt></ruby>慢が　いつか実を<ruby><rb>結</rb><rt>むす</rt></ruby>び<br>
+果てない波がちゃんと<br>
+止まりますように<br>
+君と好きな人が<br>
+百年続きますように<br>
+<br>
+3 ひらり　蝶々を<br>
+追いかけて白い<ruby><rb>帆</rb><rt>ほ</rt></ruby>を揚げて<br>
+母の　日になれば<br>
+ミズキの<ruby><rb>葉</rb><rt>は</rt></ruby>、贈って下さい<br>
+待たなくてもいいよ<br>
+知らなくてもいいよ<br>
+<br>
+薄紅色の　可愛い君のね<br>
+果てない夢がちゃんと<br>
+終わりますように<br>
+君と好きな人が<br>
+百年続きますように<br>
+<br>
+僕の我慢が　いつか実を結び<br>
+果てない波がちゃんと<br>
+止まりますように<br>
+君と好きな人が<br>
+百年続きますように<br>
+<br>
+君と好きな人が<br>
+百年続きますように<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="春が来た">【春が来た】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="バラ色の人生">【バラ色の人生】</a>B1-E3<br>
+<br>
+1 心惑わす眼　いつも熱き口<br>
+私の想ってる　あなたの<ruby><rb>面影</rb><rt>おもかげ</rt></ruby><br>
+<br>
+あなたの胸で　私は聞く<br>
+やさしの言葉<br>
+いつもかわらぬ言葉なのに<br>
+<ruby><rb>私</rb><rt>あたし</rt></ruby>はうれしい<br>
+私の胸に　<ruby><rb>幸</rb><rt>さち</rt></ruby>の影が<br>
+ある日さしたの<br>
+あなたゆえの私よ　私ゆえのあなたなの<br>
+あなたに逢うと　私の胸ときめく<br>
+<br>
+私の胸に　幸の影が<br>
+ある日さしたの<br>
+あなたゆえの私よ　私ゆえのあなたなの<br>
+あなたに逢うと　私の胸ときめく<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="浜辺の歌">【浜辺の歌】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="埴生の宿">【埴生の宿】</a>C1-C2<br>
+<br>
+1 <ruby><rb>埴生</rb><rt>はにゅう</rt></ruby>の<ruby><rb>宿</rb><rt>やど</rt></ruby>も　わが宿<br>
+玉の<ruby><rb>装</rb><rt>よそ</rt></ruby>い　<ruby><rb>羨</rb><rt>うらや</rt></ruby>まじ<br>
+のどかなりや　春の空<br>
+花はあるじ　鳥は友<br>
+<br>
+ああ　わが宿よ<br>
+たのしとも　たのもしや<br>
+<br>
+<br>
+2 <ruby><rb>書</rb><rt>ふみ</rt></ruby>読む窓も　わが窓<br>
+<ruby><rb>瑠璃</rb><rt>るり</rt></ruby>の<ruby><rb>床</rb><rt>ゆか</rt></ruby>も　<ruby><rb>羨</rb><rt>うらや</rt></ruby>まじ<br>
+<br>
+きよらなりや　秋の夜半<br>
+月はあるじ　虫は友<br>
+<br>
+おお　わが窓よ<br>
+たのしとも　たのもしや<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="春が来た">【春が来た】</a>C1-E2<br>
+<br>
+1 春が来た　 春が来た　何処に来た<br>
+山に来た　里に来た　野にも来た<br>
+<br>
+2 花が咲く　花が咲く　何処に咲く<br>
+山に咲く　里に咲く　野にも咲く<br>
+<br>
+3 鳥が鳴く　鳥が鳴く　何処で鳴く<br>
+山で鳴く 里で鳴く　野でも鳴く<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="浜辺の歌">【浜辺の歌】</a>G1-A2<br>
+<br>
+1 あした浜辺を　さまよえば<br>
+昔の事ぞ　<ruby><rb>忍</rb><rt>しの</rt></ruby>ばるる<br>
+風の音よ　雲のさまよ<br>
+寄する波も　貝の色も<br>
+<br>
+2 ゆうべ浜辺を　もとおれば<br>
+昔の人ぞ　忍ばるる<br>
+寄する波よ　返す波よ<br>
+月の色も　星の影も<br>
+<br>
+3 はやちたちまち　波を吹き<br>
+赤<ruby><rb>裳</rb><rt>も</rt></ruby>のすそぞ　ぬれもせじ<br>
+やみし<ruby><rb>我</rb><rt>われ</rt></ruby>は　すべていえて<br>
+浜辺の<ruby><rb>真砂</rb><rt>まさご</rt></ruby>　まなごいまは<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="箱根八里の半次郎">【箱根八里の半次郎】</a>C1-E2<br>
 <br>
@@ -158,12 +254,134 @@
 箱根八里の半次郎<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="花">【花】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="花">【花】</a>E1-A2<br>
+<br>
+1 春のうららの　<ruby><rb>隅</rb><rt>すみ</rt></ruby>田川<br>
+<ruby><rb>上</rb><rt>のぼ</rt></ruby>り<ruby><rb>下</rb><rt>くだ</rt></ruby>りの　<ruby><rb>船人</rb><rt>ふなびと</rt></ruby>が<br>
+<ruby><rb>櫂</rb><rt>かひ</rt></ruby>のしずくも　花と散る<br>
+眺めを何に　たとうべき<br>
+<br>
+2 見ずやあけぼの　露浴びて<br>
+<ruby><rb>我</rb><rt>われ</rt></ruby>にもの言う　桜木を<br>
+見ずや夕ぐれ　手をのべて<br>
+われさしまねく　青<ruby><rb>柳</rb><rt>やぎ</rt></ruby>を<br>
+<br>
+3 <ruby><rb>錦</rb><rt>にしき</rt></ruby>おりなす　<ruby><rb>長堤</rb><rt>ちょうてい</rt></ruby>に<br>
+暮るればのぼる　おぼろ<ruby><rb>月</rb><rt>づ</rt></ruby>き<br>
+げに一刻も　千金の<br>
+ながめを何に　たとうべき<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="花の子ルンルン">【花の子ルンルン】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="花の子ルンルン">【花の子ルンルン】</a>E1-F2-中间有两句转调，C作A<br>
+<br>
+0 ルルルンルンルン…… <br>
+<br>
+1 幸せをもたらすと　いわれてる<br>
+どこかでひっそり　咲いている<br>
+花をさがして　花をさがしています<br>
+<br>
+コスモスは　帽子に似合う<br>
+タンポポは　お昼寝まくら<br>
+アカシアの　アーチをぬけて<br>
+歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
+<br>
+私は花の子です　名前はルンルンです<br>
+いつかはあなたの　住む街へ<br>
+行くかもしれません<br>
+<br>
+ルルルンルンルン……<br>
+<br>
+2 七色を目じるしに　今日もまた<br>
+知らない街から街を行く<br>
+花をさがして　花をさがしています<br>
+<br>
+カトレアは　おしゃれな婦人<br>
+ひまわりは　いたずらざかり<br>
+<ruby><rb>菩提树</rb><rt>ぼだいじゅ</rt></ruby>に　祈りをこめて<br>
+歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
+<br>
+私は花の子です　名前はルンルンです<br>
+どこかであなたと　すれちがう<br>
+そういう気がします<br>
+<br>
+ルルルンルンルン……<br>
+<br>
+3 白バラは　やさしい悪魔<br>
+ひなげしは　おしゃべりが好き<br>
+ねむの木に　おやすみ告げて<br>
+歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
+<br>
+私は花の子です　名前はルンルンです<br>
+もうすぐあなたと　ともだちに<br>
+なれると思います<br>
+ルルルンルンルン……<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="花咲く旅路">【花咲く旅路】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="花咲く旅路">【花咲く旅路】</a>C1-E2<br>
+<br>
+1 鈴なりの花を<ruby><rb>摘</rb><rt>つ</rt></ruby>み<br>
+吹く風に夏を知る<br>
+おだやかに　ああおだやかに<br>
+今ぼんやり遠くを眺めてる<br>
+<br>
+はるかなる空の果て<br>
+想い出が<ruby><rb>駈</rb><rt>か</rt></ruby>けめぐる<br>
+なだらかな　このなだらかな<br>
+名前さえ知らない坂だけど<br>
+<br>
+咲く<ruby><rb>紫</rb><rt>むらさき</rt></ruby>は　旅路を<ruby><rb>彩</rb><rt>いろど</rt></ruby>る<br>
+<br>
+2 <ruby><rb>何処</rb><rt>いずこ</rt></ruby>へと鳥は鳴き<br>
+夢出ずる国をゆく<br>
+世の中は　ああ世の中は<br>
+なぜこんなに<ruby><rb>急</rb><rt>せ</rt></ruby>いてと流れてく<br>
+<br>
+今宵は月が　旅路を照らそうぞ<br>
+<br>
+3 喜びが川となり<br>
+悲しみは虹を呼ぶ<br>
+道無きぞ　この旅だけど<br>
+でもこんなに上手に歩いてる<br>
+<br>
+<ruby><rb>稲</rb><rt>いな</rt></ruby><ruby><rb>穂</rb><rt>ほ</rt></ruby>の先が　いつしか<ruby><rb>垂</rb><rt>た</rt></ruby>れコウベ<br>
+咲く<ruby><rb>紫</rb><rt>むらさき</rt></ruby>は　旅路を<ruby><rb>彩</rb><rt>いろど</rt></ruby>る<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="花～すべての人の心に花を～">【花～すべての人の心に花を～】</a></h1><br><h3><a href="#は">Back to Top</a></h3>
+<a id="花～すべての人の心に花を～">【花～すべての人の心に花を～】</a>G1-D3<br>
+<br>
+1 川は流れて　どこどこ行くの<br>
+人も流れて　どこどこ行くの<br>
+そんな流れが　つくころには<br>
+花として　花として<br>
+咲かせてあげたい<br>
+<br>
+泣きなさい　笑いなさい<br>
+いつの日か　いつの日か<br>
+花を咲かそうよ<br>
+<br>
+2 涙流れて　どこどこ行くの<br>
+愛も流れて　どこどこ行くの<br>
+そんな流れを　このうちに<br>
+花として　花として<br>
+むかえてあげたい<br>
+<br>
+泣きなさい　笑いなさい<br>
+いつの日か　いつの日か<br>
+花を咲かそうよ<br>
+<br>
+3 花は花として　わらいもできる<br>
+人は人として　涙も流す<br>
+それが自然の　うたなのさ<br>
+心の中に　心の中に<br>
+花を咲かそうよ<br>
+<br>
+泣きなさい　笑いなさい<br>
+いついつまでも　いついつまでも<br>
+花をつかもうよ<br>
+<br>
+泣きなさい　笑いなさい<br>
+いついつまでも　いついつまでも<br>
+花をつかもうよ<br>
+</h1><br><h3><a href="#は">Back to Top</a></h3>
 </body>
 </html>
