--- a/enkas/ひ.html
+++ b/enkas/ひ.html
@@ -13,10 +13,167 @@
 <a href="#瞳をとじて">瞳をとじて</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="ひまわり">【ひまわり】</a></h1><br><h3><a href="#ひ">Back to Top</a></h3>
+<a id="ひまわり">【ひまわり】</a>G1-A2<br>
+<br>
+0 青い空と雲　太陽をつかまえんぞ<br>
+君がいるから　俺は笑う<br>
+悲しいお別れも　最高の出逢いも<br>
+ココに生まれた奇蹟　ララ　ありがとう<br>
+<br>
+1 光るお日樣　キラキラ波打ち<ruby><rb>際</rb><rt>ぎわ</rt></ruby><br>
+青い海と空　いつも同じさ<br>
+背伸びはしないさ　自分らしくないから<br>
+素直に笑っていたいだけなんだ<br>
+<br>
+淚が　こぼれ落ちても<br>
+うつむかないで<br>
+さぁ　手を<ruby><rb>繫</rb><rt>つな</rt></ruby>いだら<br>
+また一緒に步こうか<br>
+俺らは　笑顏の　ひまわりさ!<br>
+<br>
+青い空と雲　太陽をつかまえんぞ<br>
+君がいるから　俺は笑う<br>
+悲しいお別れも　最高の出逢いも<br>
+ココに生まれた奇蹟　ララ　ありがとう<br>
+<br>
+2 やがて<ruby><rb>掃</rb><rt>かえ</rt></ruby>ってく　オレンジ色殘して…<br>
+さよならをする時も　味<ruby><rb>方</rb><rt>がた</rt></ruby>だった<br>
+月が微笑む　星がそっと寄り添う<br>
+どうかいつまでも　見守っていて<br>
+<br>
+辛いことがあったなら<br>
+<ruby><rb>深呼吸</rb><rt>しんこきゅう</rt></ruby>してごらん<br>
+泣き蟲のひまわり　またいつもの笑顏で<br>
+上向いて　胸張って　飛べるから!<br>
+<br>
+青い空と雲　太陽をつかまえんぞ<br>
+君がいるから　俺は笑う<br>
+悲しいお別れも　最高の出逢いも<br>
+ココに生まれた奇蹟　ララ　ありがとう<br>
+<br>
+3 心配掛けた　あなた傷付けた<br>
+迷惑掛けた　でも步き續けた<br>
+こぼした淚　俺バカだから<br>
+お互いの夢　それ<ruby><rb>寶</rb><rt>たから</rt></ruby>だから!<br>
+<br>
+メチャクチャな歌と<br>
+ハチャメチャな言葉<br>
+俺ムチャクチャだけど　今伝えたい<br>
+どんな時だって　微笑んでくれてた<br>
+「あなた」は俺の寶物!<br>
+<br>
+青い空と雲　太陽をつかまえんぞ<br>
+君がいるから　俺は笑う<br>
+最後の別れも　最高の出逢いも<br>
+ココに生きてる奇蹟　ララ　ありがとう<br>
+<br>
+4 もみじ<ruby><rb>彩</rb><rt>いろど</rt></ruby>り　雪が踴り<br>
+櫻舞い散り　お日樣輝き<br>
+いつも<ruby><rb>黃</rb><rt>き</rt></ruby>色い　愛のカタチ<br>
+僕のひまわり…<br>
+</h1><br><h3><a href="#ひ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="光と影のロマン">【光と影のロマン】</a></h1><br><h3><a href="#ひ">Back to Top</a></h3>
+<a id="光と影のロマン">【光と影のロマン】</a>E1-前C后A-C3<br>
+<br>
+1 ロマン語れば一晩中<br>
+疲れ知らずの all night long<br>
+恋する暇もないよ<br>
+波が押し寄せてくる<br>
+<br>
+記憶の中を<ruby><rb>泳</rb><rt>およ</rt></ruby>いでも<br>
+现実は coll and dry<br>
+<ruby><rb>愛</rb><rt>それ</rt></ruby>を確かめたくて<br>
+何処に<ruby><rb>彷徨</rb><rt>さまよ</rt></ruby>い行くの<br>
+<br>
+遠い雲のように　掴めないあなたに<br>
+ついてゆく　何処までも　心に誓って<br>
+<br>
+いつか全てが<ruby><rb>解</rb><rt>わか</rt></ruby>っても<br>
+あなたを好きでいられること<br>
+たとえ<ruby><rb>戦</rb><rt>たたか</rt></ruby>う毎日に　明け暮れても<br>
+懐かしさで思う故郷　昔の自分映す<br>
+光と影のロマン　追いかけて<br>
+<br>
+2 年下とわかっていても<br>
+<ruby><rb>生</rb><rt>なま</rt></ruby>意気と知ってても<br>
+手にするものはすべて<br>
+あなたへと<ruby><rb>繋</rb><rt>つな</rt></ruby>がってく<br>
+<br>
+いつかこの愛の　<ruby><rb>形</rb><rt>かたち</rt></ruby>が変わっても<br>
+胸焦がす　不思議な人のこと　探して<br>
+<br>
+あの時言えなかったけど<br>
+<ruby><rb>裸</rb><rt>ゼロ</rt></ruby>になれなかったけど<br>
+まるで子供のように　無邪気になれたら<br>
+膝をかかえて見た夕日　胸に<ruby><rb>刻</rb><rt>きざ</rt></ruby>み込んだ<br>
+あなたの<ruby><rb>言叶</rb><rt>メロディー</rt></ruby>　ずっと忘れない<br>
+<br>
+3 夜空 見上げて　月が光浴びて<br>
+ほんの一瞬　感じた永遠が　愛しい<br>
+<br>
+いつか全てが<ruby><rb>解</rb><rt>わか</rt></ruby>っても<br>
+あなたの愛を掴んでも<br>
+時に埋もれたように　流されない<br>
+ただ年をとるだけの<ruby><rb>大人</rb><rt>おとな</rt></ruby>には<br>
+なりたくないよね<br>
+もう<ruby><rb>過去</rb><rt>きのう</rt></ruby>のために　泣いたりしない<br>
+<br>
+4 気持ちが　一人で　動きだす　Wo<br>
+天まで　届いて　今にもはちきれ<br>
+あがいて　もがいて　どこまでも続くロマン<br>
+</h1><br><h3><a href="#ひ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="瞳をとじて">【瞳をとじて】</a></h1><br><h3><a href="#ひ">Back to Top</a></h3>
+<a id="瞳をとじて">【瞳をとじて】</a>A1-F3<br>
+<br>
+1 朝目覚める度に<br>
+君の抜け<ruby><rb>殻</rb><rt>がら</rt></ruby>が　横にいる<br>
+ぬくもりを感じた<br>
+いつもの背中が冷たい<br>
+<br>
+<ruby><rb>苦</rb><rt>にが</rt></ruby>笑いをやめて<br>
+<ruby><rb>重</rb><rt>おも</rt></ruby>いカーテンを<ruby><rb>開</rb><rt>あ</rt></ruby>けよう<br>
+眩しすぎる朝日<br>
+僕と毎日の追いかけっこだ<br>
+<br>
+あの日　見せた泣き顔<br>
+涙照らす　夕陽　肩のぬくもり<br>
+消し去ろうと願う度に<br>
+心が　体が　君を覚えている<br>
+<br>
+Your love forever<br>
+瞳をとじて　君を<ruby><rb>描</rb><rt>えが</rt></ruby>くよ<br>
+それだけでいい<br>
+たとえ季節が　僕の心を<br>
+置き去りにしても<br>
+<br>
+2 いつかは君のこと<br>
+なにも感じなく　なるのかな<br>
+今の痛み抱いて<br>
+眠る<ruby><rb>方</rb><rt>ほう</rt></ruby>がまだ いいかな<br>
+<br>
+あの日　見てた星空<br>
+願いかけて　二人探した光は<br>
+瞬く<ruby><rb>間</rb><rt>ま</rt></ruby>に消えてくのに<br>
+心は　体は　君で輝いてる<br>
+<br>
+I wish forever<br>
+瞳をとじて　君を描くよ<br>
+それしか出来ない<br>
+たとえ世界が　僕を残して<br>
+過ぎ去ろうとしても<br>
+<br>
+3 Your love forever<br>
+瞳をとじて　君を描くよ<br>
+それだけでいい<br>
+たとえ季節が　僕を残して<br>
+色を変えようとも<br>
+<br>
+記憶の中に　君を探すよ<br>
+それだけでいい<br>
+なくしたものを　越える強さを<br>
+君がくれたから<br>
+<br>
+君がくれたから<br>
+</h1><br><h3><a href="#ひ">Back to Top</a></h3>
 </body>
 </html>
