--- a/enkas/ふ.html
+++ b/enkas/ふ.html
@@ -16,16 +16,243 @@
 <a href="#釜山港へ帰れ">釜山港へ帰れ</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="ブッダのように私は死んだ">【ブッダのように私は死んだ】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="ブッダのように私は死んだ">【ブッダのように私は死んだ】</a>A1-E3<br>
+<br>
+1 目を<ruby><rb>覚</rb><rt>さ</rt></ruby>ませばそこは　土の中<br>
+手を伸ばせば<ruby><rb>闇</rb><rt>やみ</rt></ruby>を這うだけ<br>
+<ruby><rb>虚</rb><rt>むな</rt></ruby>しい唇に揺れる　愛の残り火よ<br>
+私をこんなにした人は誰?<br>
+<br>
+悪い男だと　知りながら<br>
+<ruby><rb>所</rb><rt>しょ</rt></ruby><ruby><rb>帯</rb><rt>たい</rt></ruby>持つことを夢見た<br>
+あんなに尽くした私が<br>
+邪魔になったのね<br>
+あれは<ruby><rb>魔</rb><rt>ま</rt></ruby>が差したと言うのですか?<br>
+<br>
+骨までしゃぶって私をイカせた　ねぇあなた<br>
+嘘だと気付いた時には　捨てられたのね<br>
+<br>
+この世とはオサラバと　<ruby><rb>魂</rb><rt>たまし</rt></ruby>が叫ぶよ<br>
+「愛してる」って言うから<br>
+<ruby><rb>危</rb><rt>あぶ</rt></ruby>ない橋も渡った<br>
+お<ruby><rb>釈迦</rb><rt>しゃか</rt></ruby>様に<ruby><rb>代</rb><rt>か</rt></ruby>わって　<ruby><rb>殴</rb><rt>なぐ</rt></ruby>るよ<br>
+<br>
+2 若い頃はそれなりにモテたわ<br>
+もう見た目を気にする<ruby><rb>歳</rb><rt>とし</rt></ruby>じゃない<br>
+優しい口づけに<ruby><rb>溺</rb><rt>おぼ</rt></ruby>れた　私　女だもん<br>
+だけど男は不意に手をかけた<br>
+<br>
+何<ruby><rb>食</rb><rt>く</rt></ruby>わぬ顔でテレビに出ている　ねぇあなた<br>
+世間は本当の事など　なんにも　知りゃあ　しない<br>
+<br>
+ゲリラ<ruby><rb>豪雨</rb><rt>あめ</rt></ruby>　<ruby><rb>落雷</rb><rt>いなびかり</rt></ruby><br>
+故郷へ帰してくれ<br>
+他人を見<ruby><rb>下</rb><rt>くだ</rt></ruby>した目や　身なりの悪さは赦す<br>
+ただ箸の持ち<ruby><rb>方</rb><rt>かた</rt></ruby>だけは無理でした<br>
+<br>
+3 この世から出て行くわ　<ruby><rb>魂</rb><rt>たまし</rt></ruby>が<ruby><rb>悟</rb><rt>さと</rt></ruby>ったよ<br>
+ごめんね　お母さん<br>
+みたらし団子が食べたい<br>
+太陽が西から出て　月がそっぽを向いても<br>
+お<ruby><rb>釈迦</rb><rt>しゃか</rt></ruby>様みたいにはなれない<br>
+<br>
+やっぱり私は男を抱くわ<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="プラネタリウム">【プラネタリウム】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="プラネタリウム">【プラネタリウム】</a>G1-升半音-#G2<br>
+<br>
+1 夕<ruby><rb>月</rb><rt>づく</rt></ruby>夜　顔だす<br>
+消えてく　子供の声<br>
+遠く遠く　この空のどこかに<br>
+君はいるんだろう<br>
+<br>
+夏の終わりに2人で　抜け<ruby><rb>出</rb><rt>だ</rt></ruby>した<br>
+この公園で見つけた<br>
+あの<ruby><rb>星座</rb><rt>せいざ</rt></ruby>　何だか覚えてる?<br>
+<br>
+会えなくても　記憶をたどって<br>
+同じ幸せを見たいんだ<br>
+あの香りとともに　花火がぱっと開く<br>
+<br>
+行きたいよ　君のところへ<br>
+今すぐ　かけだして　行きたいよ<br>
+まっ暗で何も　見えない<br>
+怖くても大丈夫<br>
+<br>
+数えきれない星空が<br>
+今もずっとここにあるんだよ<br>
+泣かないよ　昔君と見た<br>
+きれいな空だったから<br>
+<br>
+2 あの道まで　響く<br>
+<ruby><rb>靴</rb><rt>くつ</rt></ruby>の<ruby><rb>音</rb><rt>ね</rt></ruby>が耳に残る<br>
+大きな　自分の影を<br>
+見つめて想うのでしょう<br>
+<br>
+ちっとも　変わらないはずなのに<br>
+せつない気持ちふくらんでく<br>
+どんなに想ったって　君はもういない<br>
+<br>
+行きたいよ　君のそばに<br>
+小さくても小さくても<br>
+1番に　君が好きだよ　強くいられる<br>
+願いを　流れ星に<br>
+そっと<ruby><rb>唱</rb><rt>とな</rt></ruby>えてみたけれど<br>
+泣かないよ届くだろう　きれいな空に<br>
+<br>
+3 会えなくても　記憶をたどって<br>
+同じ幸せを見たいんだ<br>
+あの香りとともに　花火がぱっと開く<br>
+<br>
+行きたいよ　君のところへ<br>
+小さな手をにぎりしめて<br>
+泣きたいよ　それはそれは<br>
+きれいな空だった<br>
+願いを　流れ星に<br>
+そっと唱えてみたけれど<br>
+泣きたいよ　届かない想いを<br>
+この空に...。<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="故郷">【故郷】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="故郷">【故郷】</a>G1-A2<br>
+<br>
+1 兎追いしかの山<br>
+小鮒りしかの川<br>
+夢は今もめぐりて<br>
+忘れがたき故郷<br>
+<br>
+2 <ruby><rb>如何</rb><rt>いか</rt></ruby>にいます父母<br>
+<ruby><rb>恙</rb><rt>つつが</rt></ruby>なしや友がき<br>
+雨に風につけても<br>
+思い<ruby><rb>出</rb><rt>いずる</rt></ruby>故郷<br>
+<br>
+3 <ruby><rb>志</rb><rt>こころざし</rt></ruby>を果たして<br>
+何時の日にか帰らん<br>
+山は青き故郷<br>
+水は清き故郷<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="白金ディスコ">【白金ディスコ】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="白金ディスコ">【白金ディスコ】</a>G1-副歌升全音-B2<br>
+<br>
+1 見渡せば　一面　<ruby><rb>白金</rb><rt>はっきん</rt></ruby>の世界に<br>
+一歩だけ　踏み出して<br>
+いつまでも　止まらない<br>
+この胸のときめきで　一緒に踊ろう<br>
+<br>
+君の背中で　あの日<br>
+みつけた月が　今日も<br>
+ミラーボールみたいに　夜空で<br>
+キラリ　チラり　輝いてる<br>
+<br>
+かわってくもの　かわらないもの<br>
+<ruby><rb>飽</rb><rt>あ</rt></ruby>きっぽい　私が<br>
+はじめて　知った　この永遠を<br>
+君に誓うよ<br>
+<br>
+プラチナ　うれしいのに<br>
+プラチナ　せつなくなって<br>
+プラチナ　なみだがでちゃうのは<br>
+なんで? どして?　ディスコティック<br>
+<br>
+2 振り向けば　いつでも<br>
+並んでる　足跡<br>
+君とねぇ　じゃれあって<br>
+ねむたくて　ねむくない<br>
+まだちょっと　あとすこし<br>
+朝まで　踊ろう<br>
+<br>
+明日なんか　来なくてもいいから<br>
+ずっと　こんな<br>
+今日が続きますよぅに　なんて<br>
+ヒラリ　フラリ　夢の中へ<br>
+<br>
+ささやかだけど　かけがえのない<br>
+歴史を<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて<br>
+ちいさなうそも　ほんとうになる<br>
+君のとなりで<br>
+<br>
+3 かわってくもの　かわらないもの<br>
+飽きっぽい　私が<br>
+はじめて　知った　この永遠を<br>
+君に誓うよ<br>
+<br>
+ささやかだけど　かけがえのない<br>
+歴史を<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて<br>
+<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りさえも　ほんとうになる<br>
+君のとなりで<br>
+<br>
+プラチナ　うれしいのに<br>
+プラチナ　せつなくなって<br>
+プラチナ　なみだがでちゃうのは<br>
+なんで? どして?　ディスコティック<br>
+<br>
+なんで? どして?　ディスコティック<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="舟唄">【舟唄】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="舟唄">【舟唄】</a>G1-C3<br>
+<br>
+1 お酒はぬるめの　燗がいい<br>
+肴はあぶった　イカでいい<br>
+女は無口な ひとがいい<br>
+灯りはぼんやり　灯りゃいい<br>
+<br>
+しみじみ飲めば　しみじみと<br>
+想い出だけが　行き過ぎる<br>
+涙がポロリと　こぼれたら<br>
+歌いだすのさ　舟唄を<br>
+<br>
+沖の鴎に深酒させてヨ<br>
+いとしのあの娘とヨ　朝寝する<br>
+ダンチョネ<br>
+<br>
+2 店には飾りが　ないがいい<br>
+窓から港が　見えりゃいい<br>
+はやりの歌など　なくていい<br>
+時々霧笛が　鳴ればいい<br>
+<br>
+ほろほろ飲めば　ほろほろと<br>
+心がすすり　泣いている<br>
+あの頃あの娘を　思ったら<br>
+歌いだすのさ　舟唄を<br>
+<br>
+3 ぽつぽつ飲めば　ぽつぽつと<br>
+未練が胸に　舞い戻る<br>
+<ruby><rb>夜更</rb><rt>よふ</rt></ruby>けてさびしく　なったなら<br>
+歌いだすのさ　舟唄を<br>
+<br>
+ルルル……<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="釜山港へ帰れ">【釜山港へ帰れ】</a></h1><br><h3><a href="#ふ">Back to Top</a></h3>
+<a id="釜山港へ帰れ">【釜山港へ帰れ】</a>E1-A2<br>
+<br>
+1 つばき咲く春なのに<br>
+あなたは帰らない<br>
+たたずむ釜山港に<br>
+涙の雨が降る<br>
+<br>
+あついその胸に　顔うずめて<br>
+もいちど幸せ　噛みしめたいのよ<br>
+<br>
+トラワヨ　プサンハンへ<br>
+逢いたい　あなた<br>
+<br>
+2 <ruby><rb>行</rb><rt>ゆ</rt></ruby>きたくてたまらない<br>
+あなたのいる町へ<br>
+さまよう釜山港は<br>
+霧笛が胸を刺す<br>
+<br>
+きっと伝えてよ　カモメさん<br>
+いまも信じて　耐えてるあたしを<br>
+<br>
+トラワヨ　プサンハンへ<br>
+逢いたい　あなた<br>
+<br>
+3 あついその胸に　顔うずめて<br>
+もいちど幸せ　噛みしめたいのよ<br>
+<br>
+トラワヨ　プサンハンへ<br>
+逢いたい　あなた<br>
+<br>
+</h1><br><h3><a href="#ふ">Back to Top</a></h3>
 </body>
 </html>
