--- a/enkas/ほ.html
+++ b/enkas/ほ.html
@@ -11,6 +11,27 @@
 <a href="#ぼくがいる">ぼくがいる</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="ぼくがいる">【ぼくがいる】</a></h1><br><h3><a href="#ほ">Back to Top</a></h3>
+<a id="ぼくがいる">【ぼくがいる】</a>A1-D3<br>
+<br>
+1 明日になれば　涙が<ruby><rb>乾</rb><rt>かわ</rt></ruby>く<br>
+心も色づいて来る<br>
+笑顔が似合う　あなたのために<br>
+いつでもこのぼくがいる<br>
+<br>
+満<ruby><rb>月</rb><rt>げつ</rt></ruby>が赤くにじんで見え<br>
+哀しい歌が流れる<br>
+<br>
+いいコだ　いいコ　泣かないでくれ<br>
+近くにこのぼくがいる　コナン<br>
+<br>
+2 おしゃべり好きの　あなたが好きさ<br>
+いつでもこのぼくがいる<br>
+<br>
+つむじ風　街を走って行く<br>
+誰かの声に呼ばれて<br>
+<br>
+いいコだ　いいコ　泣かないでくれ<br>
+近くにこのぼくがいる　コナン<br>
+</h1><br><h3><a href="#ほ">Back to Top</a></h3>
 </body>
 </html>
