--- a/enkas/ま.html
+++ b/enkas/ま.html
@@ -39,16 +39,197 @@
 <br>
 また君に恋してる　いままでよりも深く<br>
 まだ君を好きになれる　心から<br>
+<br>
+3 また君に恋してる　いままでよりも深く<br>
+まだ君を好きになれる　心から<br>
 </h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="まつり">【まつり】</a></h1><br><h3><a href="#ま">Back to Top</a></h3>
+<a id="まつり">【まつり】</a>E1-C3<br>
+<br>
+1 男は祭りを　そうさ<br>
+かついで　生きてきた<br>
+山の神　海の神<br>
+今年も本当に　ありがとう<br>
+<br>
+白い<ruby><rb>褌</rb><rt>ふんどし</rt></ruby>　ひきしめた<br>
+<ruby><rb>裸</rb><rt>はだか</rt></ruby>若衆に　雪が舞う<br>
+祭りだ　祭りだ　祭りだ　豊年祭り<br>
+土の匂いの　しみこんだ<br>
+<ruby><rb>伜</rb><rt>せがれ</rt></ruby>その手が　宝物<br>
+<br>
+2 男は祭りで　そうさ<br>
+男をみがくんだ<br>
+山の神　海の神<br>
+<br>
+命を本当に　ありがとう<br>
+船に五<ruby><rb>色</rb><rt>しき</rt></ruby>の　旗をたて<br>
+海の男が　風を切る<br>
+祭りだ　祭りだ　祭りだ　大漁祭り<br>
+見ろよ真赤な　陽が昇る<br>
+<ruby><rb>伜</rb><rt>せがれ</rt></ruby>一番　船をこげ<br>
+<br>
+3 燃えろよ　涙と<ruby><rb>汗</rb><rt>あせ</rt></ruby>こそ　男のロマン<br>
+俺もどんとまた　生きてやる<br>
+これが日本の　祭りだよ<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="マイ フレンド">【マイ フレンド】</a></h1><br><h3><a href="#ま">Back to Top</a></h3>
+<a id="マイ フレンド">【マイ フレンド】</a>E1-降4半音-bB<br>
+<br>
+0 あなたを想うだけで　心は強くなれる<br>
+ずっと見つめてるから　走り続けて<br>
+<br>
+1 ひたむきだった遠い日の夢は<br>
+今でも眩しい<br>
+どんなに不安がいっぱいでも<br>
+真っすぐ自分の道を信じて<br>
+<br>
+飾らない素顔のあなたが好き…<br>
+変わってしまうことが哀しい<br>
+<br>
+いつも輝いていたね<br>
+少年のまま　瞳はMy Friend<br>
+あなたがそばにいると<br>
+何故か素直になれた<br>
+この<ruby><rb>距離</rb><rt>きょり</rt></ruby>通り抜ける　風になりたい<br>
+<br>
+2 <ruby><rb>真実</rb><rt>ほんとう</rt></ruby>の愛なら<br>
+きっと色んな事<br>
+乗り越えられたのに<br>
+星のパレード　涙がこぼれない様に<br>
+大きく息を吸った<br>
+ひとりでいる時の淋しさより二人で<br>
+いる時の孤独の<ruby><rb>方</rb><rt>ほう</rt></ruby>が哀しい<br>
+<br>
+いつも笑っていたね　あの頃二人<br>
+せつないMy Friend<br>
+あなたを想うだけで　心は強くなれる<br>
+ずっと見つめてるから　走り続けて<br>
+<br>
+3 いつも輝いていたね　少年のまま<br>
+　瞳はMy Friend<br>
+あなたを想うだけで　心は強くなれた<br>
+ずっと見つめてるから　走り続けて<br>
+走り続けて…<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="真夏の果実">【真夏の果実】</a></h1><br><h3><a href="#ま">Back to Top</a></h3>
+<a id="真夏の果実">【真夏の果実】</a>G1-A3<br>
+<br>
+1 涙があふれる　悲しい季節は<br>
+誰かに抱かれた夢を見る<br>
+泣きたい気持ちは言葉に出来ない<br>
+今夜も冷たい雨が降る<br>
+<br>
+こらえきれなくて　ため息ばかり<br>
+今もこの胸に　夏は巡る<br>
+<br>
+四六時中も好きと言って<br>
+夢の中へ連れて行って<br>
+忘れられない　Heart & Soul<br>
+声にならない<br>
+砂に書いた名前消して<br>
+波はどこへ帰るのか<br>
+通り過ぎ行く　Love & Roll<br>
+愛をそのままに<br>
+<br>
+2 マイナス100度の太陽みたいに<br>
+身体を<ruby><rb>湿</rb><rt>しめ</rt></ruby>らす恋をして<br>
+めまいがしそうな真夏の果実は<br>
+今でも心に咲いている<br>
+遠く離れても　黄昏時は<br>
+熱い面影が胸に<ruby><rb>迫</rb><rt>せま</rt></ruby>る<br>
+<br>
+四六時中も好きと言って<br>
+夢の中へ連れて行って<br>
+忘れられない　Heart & Soul<br>
+夜が待てない<br>
+砂に書いた名前消して<br>
+波はどこへ帰るのか<br>
+通り過ぎ行く　Love & Roll<br>
+愛をそのままに<br>
+<br>
+3 こんな夜は涙見せずに<br>
+また逢えると言って欲しい<br>
+忘れられない　Heart & Soul<br>
+涙の果実よ<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="聖母たちのララバイ">【聖母たちのララバイ】</a></h1><br><h3><a href="#ま">Back to Top</a></h3>
+<a id="聖母たちのララバイ">【聖母たちのララバイ】</a>G1-C3<br>
+<br>
+1 さあ　眠りなさい<br>
+疲れきった体を投げだして<br>
+青いそのまぶたを<br>
+唇でそっと　ふさぎましょう<br>
+<br>
+ああ　できるのなら<br>
+生まれ変わり　あなたの母になって<br>
+私のいのちさえ<br>
+差しだして　あなたを守りたいのです<br>
+<br>
+この都会は　戦場だから<br>
+男はみんな　傷を<ruby><rb>負</rb><rt>お</rt></ruby>った戦士<br>
+どうぞ　心の痛みをぬぐって<br>
+小さな子供の昔に帰って<br>
+熱い胸に　甘えて<br>
+<br>
+2 そう私にだけ<br>
+見せてくれた　あなたのその涙<br>
+あの日から決めたの<br>
+その夢を支えて　生きてゆこうと<br>
+<br>
+恋ならば　いつかは消える<br>
+けれども　もっと深い愛があるの<br>
+ある日あなたが　背中を向けても<br>
+いつも私は　あなたを遠くで<br>
+見つめている　<ruby><rb>聖母</rb><rt>マドンナ</rt></ruby><br>
+<br>
+今は　心の痛みをぬぐって<br>
+小さな子供の昔に帰って<br>
+熱い胸に　甘えて<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="迷い道">【迷い道】</a></h1><br><h3><a href="#ま">Back to Top</a></h3>
+<a id="迷い道">【迷い道】</a>G1-A2<br>
+<br>
+1 現在　過去　未来<br>
+あの人に逢ったなら<br>
+私はいつまでも待って<br>
+ると誰か伝えて<br>
+<br>
+まるで喜劇じゃないの<br>
+ひとりでいい気になって<br>
+冷めかけたあの人に<br>
+意地をはってたなんて<br>
+<br>
+ひとつ曲がり角<br>
+ひとつ間違えて<br>
+迷い道くねくね<br>
+<br>
+2 今さらカードに<br>
+愛の奇跡求めて<br>
+いかさま<ruby><rb>占</rb><rt>うらな</rt></ruby>いは続く<br>
+スペードをハートに<br>
+<br>
+あれからどうしてるの<br>
+今ごろどこにいるの<br>
+ひとりのままでいると<br>
+噂で聞いたけれど<br>
+<br>
+ひとつ曲がり角<br>
+ひとつ間違えて<br>
+迷い道くねくね<br>
+<br>
+3 捨ててしまったわ<br>
+昔のプライドなんて<br>
+もしも許されるものなら<br>
+きっと生れ変わる<br>
+<br>
+まるで喜劇じゃないの<br>
+ひとりでいい気になって<br>
+<ruby><rb>扉</rb><rt>とびら</rt></ruby>を<ruby><rb>開</rb><rt>あ</rt></ruby>けているの<br>
+今もあなたの為に<br>
+<br>
+ひとつ曲がり角<br>
+ひとつ間違えて<br>
+迷い道くねくね<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
 </body>
 </html>
