--- a/enkas/み.html
+++ b/enkas/み.html
@@ -16,16 +16,203 @@
 <a href="#魅せられて">魅せられて</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="みずいろの手紙">【みずいろの手紙】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="みずいろの手紙">【みずいろの手紙】</a>C1-E2<br>
+<br>
+0 お元気ですか そして　今でも<br>
+愛しているといって下さいますか<br>
+<br>
+1 みずいろは涙いろ　そんな<ruby><rb>便</rb><rt>びん</rt></ruby>箋に<br>
+泣きそうな心をたくします<br>
+あれこれと楽しげなことを書きならべ<br>
+さびしさをまぎらす私です<br>
+<br>
+逢えなくなって二月過ぎて<br>
+なおさらつのる恋心<br>
+手紙読んだら少しでいいから<br>
+私のもとへ来て下さい<br>
+<br>
+2 みずいろは涙いろ　それを知りながら<br>
+あなたへの手紙を書いてます<br>
+誰からも恋をしているとからかわれ<br>
+それだけがうれしい私です<br>
+<br>
+愛しているといわれた時が<br>
+だんだん遠くなるみたい<br>
+手紙読んだら少しでいいから<br>
+私のもとへ来て下さい<br>
+私のもとへ来て下さい<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="みずいろの雨">【みずいろの雨】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="みずいろの雨">【みずいろの雨】</a>E1-C3<br>
+<br>
+0 ああ　みずいろの雨<br>
+私の肩を抱いてつつんで降り続くの<br>
+ああ　くずれてしまえ<br>
+あとかたもなく流されてゆく愛のかたち<br>
+<br>
+1 やさしい人ね　あなたって人は<br>
+見ないふりしていたの　私のあやまち<br>
+ひとときの気まぐれ　通りすぎるまで<br>
+忘れてよ　忘れてよ　愛したことなど<br>
+<br>
+ああ　みずいろの雨<br>
+私の肩を抱いてつつんで　降り続くの<br>
+ああ　忘れてしまえ<br>
+あとかたもなく流されてゆく愛のかたち<br>
+<br>
+2 とがめる言葉なら素直に聞けたわ<br>
+ほほえんでいただけのなつかしい日々<br>
+傷ついたその分　淋しい目をしてた<br>
+もどれない　もどれない<br>
+あの日の二人には<br>
+<br>
+ああ　みずいろの雨<br>
+私の肩を抱いてつつんで降り続くの<br>
+ああ　くずれてしまえ<br>
+あとかたもなく流されてゆく愛のかたち<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="未来へ">【未来へ】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="未来へ">【未来へ】</a>E1-A2<br>
+<br>
+0 ほら　足元を見てごらん<br>
+これがあなたの歩む道<br>
+ほら　前を見てごらん<br>
+あれがあなたの未来<br>
+<br>
+1 母がくれたたくさんの優しさ<br>
+愛を<ruby><rb>抱</rb><rt>いだ</rt></ruby>いて歩めと繰り返した<br>
+あの時はまだ<ruby><rb>幼</rb><rt>おさな</rt></ruby>くて意味など知らない<br>
+そんな私の手を握り<br>
+一緒に歩んできた<br>
+<br>
+夢はいつも空高くあるから<br>
+届かなくて怖いね<br>
+だけど追い続けるの<br>
+自分の物語だからこそ諦めたくない<br>
+不安になると手を握り<br>
+一緒に歩んできた<br>
+<br>
+その優しさを時には<ruby><rb>嫌</rb><rt>いや</rt></ruby>がり<br>
+離れた母へ素直になれず<br>
+<br>
+ほら　足元を見てごらん<br>
+これがあなたの歩む道<br>
+ほら　前を見てごらん<br>
+あれがあなたの未来<br>
+<br>
+2 その優しさを時には嫌がり<br>
+離れた母へ素直になれず<br>
+<br>
+ほら 足元を見てごらん<br>
+これがあなたの歩む道<br>
+ほら　前を見てごらん<br>
+あれがあなたの未来<br>
+<br>
+ほら　足元を見てごらん<br>
+これがあなたの歩む道<br>
+ほら　前を見てごらん<br>
+あれがあなたの未来<br>
+<br>
+未来へ向かって<br>
+ゆっくりと歩いて行こう<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="水色">【水色】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="水色">【水色】</a>G1-C3<br>
+<br>
+1 想いは水色の　<ruby><rb>雫</rb><rt>しずく</rt></ruby>の中で揺れてる<br>
+三<ruby><rb>日</rb><rt>か</rt></ruby>月が手のひらに浮かぶ　この夜に<br>
+今ひとたびの　言葉だけ<br>
+貴方に伝えましょう<br>
+<br>
+溶けては<ruby><rb>染</rb><rt>し</rt></ruby>みわたるほのかな夜の吐息よ<br>
+<ruby><rb>愛</rb><rt>いと</rt></ruby>しい涙色の声で泣く虫と<br>
+<ruby><rb>闇</rb><rt>やみ</rt></ruby>夜を照らす星達の　心に憧れて<br>
+<br>
+<ruby><rb>悪戯</rb><rt>いたずら</rt></ruby>な花びら<br>
+遥か遠い雲の便り<br>
+<br>
+2 わたしは水色の翼　大空に広げ<br>
+疲れて飛べない日は　大きな木に止まり<br>
+愛の言葉と風の唄　貴方にうたいましょう<br>
+<br>
+3 季節は限りなく回り続けてるけど<br>
+わたしのこの心に　光る水色は<br>
+いついつまでも　変わらない　空と海の色<br>
+<br>
+思い<ruby><rb>出</rb><rt>で</rt></ruby>よ　ありがとう<br>
+白い波が　頬を濡らす<br>
+青い<ruby><rb>地球</rb><rt>ほし</rt></ruby>が眩しすぎて<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="港町ブルース">【港町ブルース】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="港町ブルース">【港町ブルース】</a>C1-E2<br>
+<br>
+1 背のびして見る海峡を<br>
+今日も汽笛が遠ざかる<br>
+あなたにあげた　夜をかえして<br>
+港、港　<ruby><rb>函館</rb><rt>はこだて</rt></ruby>　通り雨<br>
+<br>
+2 流す涙で割る酒は<br>
+だました男の味がする<br>
+あなたの影を　ひきずりながら<br>
+港、宮<ruby><rb>古</rb><rt>こ</rt></ruby>　<ruby><rb>釜</rb><rt>かま</rt></ruby>石　<ruby><rb>気仙沼</rb><rt>けせんぬま</rt></ruby><br>
+<br>
+3 出船　入船　別れ<ruby><rb>船</rb><rt>ぶね</rt></ruby><br>
+あなた乗せない帰り<ruby><rb>船</rb><rt>ぶね</rt></ruby><br>
+うしろ姿も　他人のそら似<br>
+港、<ruby><rb>三</rb><rt>み</rt></ruby>崎　<ruby><rb>焼津</rb><rt>やいず</rt></ruby>に　<ruby><rb>御</rb><rt>お</rt></ruby>前崎<br>
+<br>
+4 別れりゃ三月　待ちわびる<br>
+女<ruby><rb>心</rb><rt>ごころ</rt></ruby>のやるせなさ<br>
+明日はいらない　今夜が欲しい<br>
+港、高知　高松　八<ruby><rb>幡</rb><rt>はた</rt></ruby>浜<br>
+<br>
+5 呼んでとどかぬ人の名を<br>
+こぼれた酒と指で書く<br>
+海に涙の　ああ愚痴ばかり<br>
+港、別府　長崎　枕<ruby><rb>崎</rb><rt>ざき</rt></ruby><br>
+<br>
+6 女心の残り火は<br>
+燃えて身をやく桜島<br>
+ここは<ruby><rb>鹿児島</rb><rt>かごしま</rt></ruby>　旅路の果てか<br>
+港、港町ブルースよ<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="魅せられて">【魅せられて】</a></h1><br><h3><a href="#み">Back to Top</a></h3>
+<a id="魅せられて">【魅せられて】</a>E1-B2<br>
+<br>
+1 南に向いてる窓を明け<br>
+一人で見ている　海の色<br>
+美しすぎると　怖くなる<br>
+若さによく似た真昼の蜃気楼<br>
+<br>
+Wind is blowing from the Aegean<br>
+女は海<br>
+好きな男の腕の中でも<br>
+違う男の夢を見る<br>
+Uh-　Ah-　Uh-　Ah-<br>
+私の中でお眠りなさい<br>
+Wind is blowing from the Aegean<br>
+女は恋<br>
+<br>
+2 昨夜の余韻が隅々に<br>
+<ruby><rb>気怠</rb><rt>けだる</rt></ruby>い甘さを　残してる<br>
+レースのカーテン　ひきちぎり<br>
+体に巻きつけ　踊ってみたくなる<br>
+<br>
+Wind is blowing from the Aegean<br>
+女は海<br>
+やさしい人に抱かれながらも<br>
+強い男にひかれてく<br>
+Uh-　Ah-　Uh-　Ah-<br>
+私の中でお眠りなさい<br>
+<br>
+3 Wind is blowing from the Aegean<br>
+女は海<br>
+好きな男の腕の中でも<br>
+違う男の夢を見る<br>
+Uh-　Ah-　Uh-　Ah-<br>
+私の中でお眠りなさい<br>
+Wind is blowing from the Aegean<br>
+女は恋<br>
+</h1><br><h3><a href="#み">Back to Top</a></h3>
 </body>
 </html>
