--- a/enkas/む.html
+++ b/enkas/む.html
@@ -11,12 +11,187 @@
 <a href="#ムーンライト伝説">ムーンライト伝説</a><br>
 <a href="#無錫旅情">無錫旅情</a><br>
 <a href="#麦畑">麦畑</a><br>
+<a href="#麦畑・パート2">麦畑・パート2</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="ムーンライト伝説">【ムーンライト伝説】</a></h1><br><h3><a href="#む">Back to Top</a></h3>
+<a id="ムーンライト伝説">【ムーンライト伝説】</a>E1-B2<br>
+<br>
+1 ゴメンね　素直じゃなくて<br>
+夢の中なら言える<br>
+<ruby><rb>思考回路</rb><rt>しこうかいろ</rt></ruby>はショート寸前<br>
+今すぐ　会いたいよ<br>
+<br>
+泣きたくなるような　moonlight<br>
+電話も出来ない　midnight<br>
+だって純情　どうしよう<br>
+ハートは<ruby><rb>万華鏡</rb><rt>まんげきょう</rt></ruby><br>
+<br>
+月の光に　<ruby><rb>導</rb><rt>みちび</rt></ruby>かれ<br>
+何度も　巡り会う<br>
+<br>
+<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え<br>
+<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
+同じ<ruby><rb>地球</rb><rt>くに</rt></ruby>に生まれたの<br>
+ミラクルロマンス<br>
+<br>
+2 も一度　ふたりで　weekend<br>
+神様　かなえて　happy-end<br>
+現在　過去　未来も<br>
+あなたに<ruby><rb>首</rb><rt>くび</rt></ruby>ったけ<br>
+<br>
+出会った時の　懐かしい<br>
+まなざし　忘れない<br>
+<br>
+幾千万の星から　あなたを見つけられる<br>
+偶然もチャンスに変える<br>
+生き<ruby><rb>方</rb><rt>かた</rt></ruby>が好きよ<br>
+<br>
+3 不思議な奇跡クロスして<br>
+何度も　巡り会う<br>
+<br>
+<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え<br>
+<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
+同じ<ruby><rb>地球</rb><rt>くに</rt></ruby>に生まれたの<br>
+ミラクルロマンス<br>
+信じているの　ミラクルロマンス<br>
+</h1><br><h3><a href="#む">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="無錫旅情">【無錫旅情】</a></h1><br><h3><a href="#む">Back to Top</a></h3>
+<a id="無錫旅情">【無錫旅情】</a>E1-C3<br>
+<br>
+1 君の知らない　異国の街で<br>
+君を想えば　泣けてくる<br>
+俺など忘れて　幸せつかめと<br>
+チャイナの旅路を　行くおれさ<br>
+上海　蘇州と　汽車に乗り<br>
+太湖のほとり　無錫の街へ<br>
+<br>
+2 船にゆられて　運<ruby><rb>河</rb><rt>が</rt></ruby>を行けば<br>
+ばかな別れが　くやしいよ<br>
+あんなに愛した　あんなに燃えてた<br>
+命を賭けたら　できたのに<br>
+涙の横顔　ちらついて<br>
+歴史の街も　ぼやけて見える<br>
+<br>
+3 むかしながらの　ジャンクが走る<br>
+はるか小島は 三山か<br>
+鹿頂山から　太湖を望めば<br>
+心の中まで　広くなる<br>
+ごめんよ　も一度　出直そう<br>
+今度は君を　はなしはしない<br>
+</h1><br><h3><a href="#む">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="麦畑">【麦畑】</a></h1><br><h3><a href="#む">Back to Top</a></h3>
+<a id="麦畑">【麦畑】</a>A1-C3<br>
+<br>
+1 俺らと一緒に暮らすのは<br>
+およね　おめえだと<br>
+ずーと前から決めていた<br>
+嫁っこさ来ておくれ<br>
+<br>
+やんだたまげたな<br>
+急に何言うだ<br>
+俺も前から松っあんを<br>
+好きだと思ってた<br>
+<br>
+<ruby><rb>鍬</rb><rt>くわ</rt></ruby>を持つ手が震えてる<br>
+<ruby><rb>鎌</rb><rt>かま</rt></ruby>を持つ手も震えてる<br>
+二人の心は沈む夕陽に<br>
+真赤っ赤に染められて<br>
+俺でええのか<br>
+俺らおめえでええてば<br>
+愛の花咲く　麦畑<br>
+<br>
+2 もしも嫌いと言われたら<br>
+俺らなじょしたべ<br>
+生きる希望も夢もなく<br>
+一人で死んだべな<br>
+<br>
+あいやかわいそう<br>
+馬鹿なこと言うな<br>
+俺らも毎日松っあんの<br>
+プロポーズ待っていた<br>
+<br>
+交わす目と目が震えてる<br>
+さわる手と手も震えてる<br>
+二人の心は沈む夕陽に<br>
+真赤っ赤にそめられて<br>
+俺ら信じてええのか<br>
+俺ら絶対嘘つかね<br>
+愛の花咲く麦畑<br>
+<br>
+3 俺らの嫁っこに来るってか<br>
+およね　えがったな<br>
+うんと大事にすっからよ<br>
+も少しこっちゃさこい<br>
+<br>
+やんだはずかしいな<br>
+ちっと気が早えな<br>
+俺らも一生松っあんを<br>
+たよりにすっからよ<br>
+<br>
+合わす口びる震えてる<br>
+うれし涙も震えてる<br>
+二人の心は沈む夕陽に<br>
+真赤っ赤にそめられて<br>
+俺ら本当にハッピー<br>
+俺らも本当にハッピー<br>
+愛の花咲く麦畑<br>
+</h1><br><h3><a href="#む">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="麦畑・パート2">【麦畑・パート2】</a>A1-C3<br>
+<br>
+1 俺らと夫婦で早や十年<br>
+およね　ありがとう<br>
+やっぱ　お前は最高だ<br>
+大事な宝物<br>
+<br>
+やんだねぇ松っあん<br>
+急に何言うだ<br>
+俺らのこの目にゃ見えで来る<br>
+今でもあの<ruby><rb>場面</rb><rt>ばめん</rt></ruby><br>
+<br>
+鍬を握ってピロポーズ<br>
+鎌を握って嬉し泣き<br>
+二人の心はのぼる朝日に<br>
+ギンギラギンに照らされて<br>
+俺らあせった初めてだ<br>
+俺らもあせったあの時は<br>
+あれから１０年　麦畑…つ<br>
+<br>
+2 やっぱ田舎はええもんだ<br>
+皆んな活き活きと<br>
+およねお前のその肌も<br>
+若ぐて艶つやだ<br>
+<br>
+やんだはずかしな<br>
+今更何言うだ<br>
+松っあんガンバレもう一人<br>
+早えとこ作るべな<br>
+<br>
+胸を合わせて感じてる<br>
+腕に抱かれて燃えている<br>
+二人の心はのぼる朝日に<br>
+ギンギラギンに照らされて<br>
+俺ら一生離れねぇ<br>
+俺らもお前を離さねぇ<br>
+惚れて１０年　麦畑…つ<br>
+<br>
+3 やっぱこれから宇宙だべぇ<br>
+およねついてこい<br>
+月で畑さ耕して<br>
+米、麦作るべな<br>
+<br>
+やんだたまげたな<br>
+夢がでっけえな<br>
+おらも一緒についてくべ<br>
+未来の果てまでも<br>
+<br>
+うさぎも月では餅ついて<br>
+かぐや姫まで月に住む<br>
+二人の心はのぼる朝日に<br>
+ギンギラギンに照らされて<br>
+俺らITヤンママよ<br>
+俺らもパソコン始めっか<br>
+これから１０年　麦畑…つ<br>
+</h1><br><h3><a href="#む">Back to Top</a></h3>
 </body>
 </html>
