--- a/enkas/め.html
+++ b/enkas/め.html
@@ -11,6 +11,46 @@
 <a href="#めぐる季節">めぐる季節</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="めぐる季節">【めぐる季節】</a></h1><br><h3><a href="#め">Back to Top</a></h3>
+<a id="めぐる季節">【めぐる季節】</a>D1-E2<br>
+<br>
+1 薄紅　花景色<br>
+せつなさを知った春<br>
+はかなく散ってゆく<br>
+風の指先ふれて<br>
+<br>
+静かに見える波<br>
+眩し過ぎる夏の日<br>
+心の<ruby><rb>海岸</rb><rt>かいがん</rt></ruby>で白く砕けていった<br>
+<br>
+過ぎゆく季節の果てに<br>
+たたずむ人は誰なの?<br>
+ゆれる想い<br>
+自分をだきしめたの　一人<br>
+<br>
+明日はどんな日に<br>
+頬づえの窓辺から<br>
+かたちのない夢を<br>
+きっと見つけにゆこう<br>
+<br>
+2 色づく街ゆけば<br>
+誰かに逢いたい秋<br>
+やさしくなれそうな<br>
+夕暮れのさみしさよ<br>
+<br>
+凍えた手のひらで<br>
+とけてゆく<ruby><rb>粉</rb><rt>こな</rt></ruby>雪は<br>
+涙によく似てた<br>
+ぬくもりに出会う冬<br>
+<br>
+幸せを探す人が<br>
+一番幸せだって<br>
+めぐる季節<br>
+想い出に変えながら　二人<br>
+<br>
+明日はどんな風<br>
+歩きだす窓辺から<br>
+もうすぐ見えてくる<br>
+夢を渡ってゆこう<br>
+</h1><br><h3><a href="#め">Back to Top</a></h3>
 </body>
 </html>
