--- a/enkas/も.html
+++ b/enkas/も.html
@@ -13,10 +13,88 @@
 <a href="#紅葉">紅葉</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="森のくまさん">【森のくまさん】</a></h1><br><h3><a href="#も">Back to Top</a></h3>
+<a id="森のくまさん">【森のくまさん】</a>C1-C2<br>
+<br>
+1 ある日　森の中<br>
+熊さんに　であった<br>
+花咲く　森の道<br>
+熊さんに　であった<br>
+<br>
+2 熊さんに　言う事にゃ<br>
+お嬢さん　お<ruby><rb>逃</rb><rt>に</rt></ruby>げなさい<br>
+スタコラ　サッサッサのサ<br>
+スタコラ　サッサッサのサ<br>
+<br>
+3 ところが　熊さんが<br>
+後から　付いてくる<br>
+トコトコ　トッコトッコト<br>
+トコトコ　トッコトッコト<br>
+<br>
+4 お嬢さん　お待ちなさい<br>
+ちょっと　落とし物<br>
+白い　貝<ruby><rb>殻</rb><rt>がら</rt></ruby>の<br>
+小さな　　イヤリング<br>
+<br>
+5 あら　熊さん　ありがとう<br>
+お礼に　歌いましょう<br>
+ラララ　ラララララ<br>
+ラララ　ラララララ<br>
+<br>
+ラララ　ラララララ<br>
+ラララ　ラララララ<br>
+</h1><br><h3><a href="#も">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="森の水車">【森の水車】</a></h1><br><h3><a href="#も">Back to Top</a></h3>
+<a id="森の水車">【森の水車】</a>C1-D2<br>
+<br>
+1 緑の森の　<ruby><rb>彼方</rb><rt>かなた</rt></ruby>から<br>
+陽気な唄が　聞えますましょう<br>
+あれは水車の　廻る音<br>
+耳を<ruby><rb>澄</rb><rt>す</rt></ruby>まして　お聞きなさい<br>
+<br>
+コトコトコットン　コトコトコットン<br>
+ファミレドシドレミファ<br>
+コトコトコットン　コトコトコットン<br>
+仕事に<ruby><rb>励</rb><rt>はげ</rt></ruby>みましょう<br>
+コトコトコットン　コトコトコットン<br>
+<ruby><rb>何時</rb><rt>いつ</rt></ruby>の日か　楽しい春が　やって来る<br>
+<br>
+2 雨の降る日も　風の夜も<br>
+森の水車は　休みなく<br>
+<ruby><rb>粉挽臼</rb><rt>こなひきうす</rt></ruby>の　拍子（ひょうし）とり<br>
+愉快に唄を　続けます<br>
+<br>
+<br>
+コトコトコットン　コトコトコットン<br>
+ファミレドシドレミファ<br>
+コトコトコットン　コトコトコットン<br>
+仕事に<ruby><rb>励</rb><rt>はげ</rt></ruby>みましょう<br>
+コトコトコットン　コトコトコットン<br>
+何時の日か　楽しい春が　やって来る<br>
+<br>
+3 もしもあなたが　<ruby><rb>怠</rb><rt>なま</rt></ruby>けたり<br>
+遊んでいたく　なったとき<br>
+森の水車の　唄<ruby><rb>声</rb><rt>ごえ</rt></ruby>を<br>
+一人静に　お聞きなさい<br>
+<br>
+コトコトコットン　コトコトコットン<br>
+ファミレドシドレミファ<br>
+コトコトコットン　コトコトコットン<br>
+仕事に<ruby><rb>励</rb><rt>はげ</rt></ruby>みましょう<br>
+コトコトコットン　コトコトコットン<br>
+いつの日か　楽しい春が　やって来る<br>
+</h1><br><h3><a href="#も">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="紅葉">【紅葉】</a></h1><br><h3><a href="#も">Back to Top</a></h3>
+<a id="紅葉">【紅葉】</a>G1-A2<br>
+<br>
+1 秋の夕日に　照る山紅葉<br>
+<ruby><rb>濃</rb><rt>こ</rt></ruby>いも<ruby><rb>薄</rb><rt>うす</rt></ruby>いも　<ruby><rb>数</rb><rt>かず</rt></ruby>ある中に<br>
+松をいろどる　<ruby><rb>楓</rb><rt>かえで</rt></ruby>や<ruby><rb>蔦</rb><rt>つた</rt></ruby>は<br>
+山のふもとの　<ruby><rb>裾</rb><rt>すそ</rt></ruby>模様<br>
+<br>
+2 <ruby><rb>渓</rb><rt>たに</rt></ruby>の流れに　散り浮く紅葉<br>
+波にゆられて　離れて寄って<br>
+赤や<ruby><rb>黄</rb><rt>き</rt></ruby>色の　色様々に<br>
+水の上にも　織る<ruby><rb>錦</rb><rt>にしき</rt></ruby><br>
+</h1><br><h3><a href="#も">Back to Top</a></h3>
 </body>
 </html>
